@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-10-28T08:30:36Z",
+  "timestamp" : "2022-10-28T16:26:30Z",
   "count_outdated" : 2523,
   "uniques_outdated" : 656,
-  "count" : 2586,
-  "uniques" : 693,
+  "count" : 2577,
+  "uniques" : 687,
   "clones" : [
     {
       "timestamp": "2022-10-14T00:00:00Z",
-      "count": 11,
+      "count": 1,
       "count_minmax": [ 1, 13 ],
-      "uniques": 8,
+      "uniques": 1,
       "uniques_minmax": [ 1, 9 ]
     },
     {
@@ -100,6 +100,13 @@
       "timestamp": "2022-10-27T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
