@@ -1,11 +1,11 @@
 {
-  "count": 63,
-  "uniques": 21,
+  "count": 54,
+  "uniques": 16,
   "clones": [
     {
       "timestamp": "2022-10-14T00:00:00Z",
-      "count": 11,
-      "uniques": 8
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-10-15T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-10-27T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-28T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
