@@ -1,3 +1,11 @@
+2022-10-28T16:26:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3346960961 # 977
+* notice: last 14d: unq all: 16 54
+* notice: prev accum: outdated-unq outdated-all / unq all: 656 2523 / 693 2586
+* notice: next accum: outdated-unq outdated-all / unq all: 656 2523 / 687 2577
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -7 -10 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-14 2022-10-28]
+
 2022-10-28T08:30:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3343983516 # 976
 * notice: last 14d: unq all: 21 63
